<resources>
    <string name="app_name">ListaCompras</string>
    <string name="Adicionar">ADICIONAR</string>
    <string name="Limpar">LIMPAR LISTA</string>
    <string name="AddItem">Digite um Item</string>
    <string name="Total">Total de itens: 0</string>
    <string name="Valor">Valor do item</string>
    <string name="Titulo">Minha Lista de Compras</string>
    <string name="ValorTotal">Total: R$ 0.00</string>
    <string name="TituloSplaSH">LISTA COMPRAS</string>
</resources>